--- a/template.html
+++ b/template.html
@@ -1,70 +1,41 @@
 <html>
 	<head>
-		<link rel="stylesheet" href="style.css">
-		<script src="https://code.highcharts.com/highcharts.js"></script>
-		<script src="https://code.highcharts.com/modules/exporting.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>
+		<script language="JavaScript">
+			function displayLineChart() {
+				var data = {
+					labels: ${labels},
+					datasets: [
+						{
+							label: "Commits per day",
+							pointRadius: 0,
+							data: ${data}
+						},
+					]
+				};
+				var ctx = document.getElementById("lineChart").getContext("2d");
+				var options = {
+					responsive: false,
+					fill: true,
+					scales : {
+						xAxes : [ {
+							gridLines : {
+								display : false
+							}
+						} ]
+					}
+				};
+
+				var lineChart = new Chart.Line(ctx, {data, options});
+			};
+		</script>
 	</head>
-	<body>
+	<body onload="displayLineChart();">
 		<div>
 			<div class="name">${name}</div>
 		</div>
 		<div>
-			<div id="container"></div>
-			<table id="datatable">
-    <thead>
-        <tr>
-            <th></th>
-            <th>Jane</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr>
-            <th>Apples</th>
-            <td>3</td>
-        </tr>
-        <tr>
-            <th>Pears</th>
-            <td>2</td>
-        </tr>
-        <tr>
-            <th>Plums</th>
-            <td>5</td>
-        </tr>
-        <tr>
-            <th>Bananas</th>
-            <td>1</td>
-        </tr>
-        <tr>
-            <th>Oranges</th>
-            <td>2</td>
-        </tr>
-    </tbody>
-</table>
-			<script>
-				Highcharts.chart('container', {
-					data: {
-						table: 'datatable'
-					},
-					chart: {
-						type: 'column'
-					},
-					title: {
-						text: 'Data extracted from a HTML table in the page'
-					},
-					yAxis: {
-						allowDecimals: false,
-						title: {
-							text: 'Units'
-						}
-					},
-					tooltip: {
-						formatter: function () {
-							return '<b>' + this.series.name + '</b><br/>' +
-								this.point.y + ' ' + this.point.name.toLowerCase();
-						}
-					}
-				});
-			</script>
+			<canvas id="lineChart" width="1000" height="600"></canvas>
 		</div>
 	</body>
 </html>
